# python.template

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  cookiecutter.json  pyproject.toml  python.template.code-workspace  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
conf/: machine_learning.json  machine_learning.yaml
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/doctrees/: environment.pickle  index.doctree
docs/src/: conf.py  index.rst
files/: ci.yml
src/: make_python_file.py
tests/: test_make_ci.py  test_make_repository_structure.py
{{cookiecutter.project_name}}/: .env  LICENSE.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/conf/: machine_learning.json
{{cookiecutter.project_name}}/docs/src/: conf.py  index.rst
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  pyproject.toml  requiremens.txt  setup.py  {{cookiecutter.project_slug}}.code-workspace
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  new_release.yml
{{cookiecutter.project_slug}}/conf/: machine_learning.json
{{cookiecutter.project_slug}}/docs/src/: index.rst
