[tool.poetry]
name = "python.template"
version = "0.1.0"
description = "A cookiecutter template for Python projects"
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11.1,<4"
cookiecutter = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
watermark = "^2.3.1"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".", "{{ cookiecutter.repo_name }}"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
