[tool.poetry]

name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"

packages = [{ include = "{{cookiecutter.project_slug}}" }]

license = "MIT"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

readme = "README.md"
homepage = "https://pypi.org/project/{{cookiecutter.project_slug}}"
documentation = "https://{{cookiecutter.project_slug}}.readthedocs.io"
repository = "https://{{cookiecutter.repository_link}}"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}..{{cookiecutter.python_patch_version}}",
]

[tool.poetry.dependencies]

python = "^{{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}"
python-dotenv = "*"

# TODO: Remove these and add your library's requirements

[tool.poetry.group.dev.dependencies]

# Formatters
black = "*"
tomli = "*" # missing 'black' dependency
isort = "*"

# Linters

# Testing
pytest = "*"

# Reports
coveragespace = "*"

# Documentation
sphinx = "*"

# Tooling
watermark = "*"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".", "{{ cookiecutter.project_slug }}"
]
addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
