[tool.poetry]

name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"

license = "MIT"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

readme = "README.md"
homepage = "https://pypi.org/project/{{cookiecutter.project_slug}}"
documentation = "https://{{cookiecutter.project_slug}}.readthedocs.io"
repository = "https://www.github.com/{{cookiecutter.user_name}}/{{cookiecutter.project_slug}}"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}..{{cookiecutter.python_patch_version}}",
]

[tool.poetry.dependencies]

python = "^{{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}"
python-dotenv = "*"
cartorio = "*"

# TODO: Remove these and add your library's requirements

[tool.poetry.group.dev.dependencies]
gitpython = "*"
twine = "*"
wget = "*"

# Formatters
black = "*"
tomli = "*" # missing 'black' dependency
isort = "*"
rope = "*"

# Linters
mypy = "*"

# Testing
pytest = "*"

# Reports
coveragespace = "*"

# Documentation
sphinx = "*"
sphinx-rtd-theme = "*"
myst-parser = "*"
sphinxcontrib-napoleon = "*"

# Tooling
watermark = "*"

[tool.mypy]
# References
# [1] https://towardsdatascience.com/setting-up-python-projects-part-ii-c4bd84b709d1

# 3rd party import
ignore_missing_imports = true

# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true

# platform
python_version = "3.10"

# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# None and Optional
no_implicit_optional = true

# Warnings
warn_return_any = false
warn_unreachable = true

# Misc
pretty = true

[tool.black]
quiet = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests", "{{ cookiecutter.project_slug }}"
]
pythonpath = [
    ".", "{{ cookiecutter.project_slug }}"
]
addopts = """
--strict-markers
--doctest-modules 
--doctest-report
ndiff
-r sxX
--show-capture=log
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
